--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:title" content="Nivākya - Smart Voices, Seamless Solutions" />
     <meta property="og:description" content="Revolutionary AI-powered voice agents for inbound & outbound calls, lead generation, and seamless CRM integration." />
-    <meta property="og:type" content="website" />
+    <!-- <meta property="og:type" content="website" /> -->
 <!--     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
 <!--     <meta name="twitter:card" content="summary_large_image" /> -->
