--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Nivākya - Smart Voices, Seamless Solutions" />
     <meta property="og:description" content="Revolutionary AI-powered voice agents for inbound & outbound calls, lead generation, and seamless CRM integration." />
     <meta property="og:type" content="website" /> -->
-    <meta property="og:image" content="./public/favicon.png" />
+    <meta property="og:image" content="https://github.com/CodexAbhi/nirvakya-test-2/blob/main/public/favicon.png" />
 
 <meta name="twitter:card" content="summary_large_image" />
     <!-- <meta name="twitter:site" content="@" /> -->
-<meta name="twitter:image" content="./public/favicon.png" />
+<meta name="twitter:image" content="https://github.com/CodexAbhi/nirvakya-test-2/blob/main/public/favicon.png" />
   </head>
 
   <body>
